--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 	</head>
 	<body>
 		<div id="container"></div>
+		<script type="text/javascript" src="scripts/konva.js"></script>
 		<script type="text/javascript" src="scripts/helpers.js"></script>
-		<script type="text/javascript" src="scripts/libcanvas.js"></script>
+		<script type="text/javascript" src="scripts/ball.js"></script>
 		<script src="scripts/app.js"></script>
 	</body>
 </html>
