--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 				margin: 0;
 				padding: 0;
 			}
-			.konvajs-content {
-			}
 		</style>
 	</head>
 	<body>
 		<div id="container"></div>
-		<script type="text/javascript" src="scripts/konva.js"></script>
-		<script type="text/javascript" src="scripts/helpers.js"></script>
-		<script type="text/javascript" src="scripts/ball.js"></script>
+		<script type="text/javascript" src="scripts/vendor/konva.js"></script>
+		<script type="text/javascript" src="scripts/config.js"></script>
+		<script type="text/javascript" src="scripts/components/helpers.js"></script>
+		<script type="text/javascript" src="scripts/components/ball.js"></script>
+		<script type="text/javascript" src="scripts/components/area.js"></script>
+		<script type="text/javascript" src="scripts/components/vector2.js"></script>
 		<script src="scripts/app.js"></script>
 	</body>
 </html>
