--- a/index.html
+++ b/index.html
@@ -1,38 +1,31 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>TODO supply a title</title>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<style type="text/css">
-			html, body {
-				margin: 0;
-				padding: 0;
-				font-family: sans-serif;
-			}
-			#save, #flush {
-				background: #f2f2f2;
-				padding: 5px 10px;
-				position: fixed;
-				top: 10px;
-				left: 50px;
-				text-decoration: none;
-			}
-			#flush {
-				left: 180px;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="container"></div>
-		<a href="#" id="save" onclick="application.save()">save stage</a>
-		<a href="#" id="flush" onclick="application.flush()">flush stage</a>
-		<script type="text/javascript" src="scripts/vendor/konva.js"></script>
-		<script type="text/javascript" src="scripts/config.js"></script>
-		<script type="text/javascript" src="scripts/components/helpers.js"></script>
-		<script type="text/javascript" src="scripts/components/ball.js"></script>
-		<script type="text/javascript" src="scripts/components/area.js"></script>
-		<script type="text/javascript" src="scripts/components/vector2.js"></script>
-		<script src="scripts/app.js"></script>
-	</body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Jon Doe - Web Developer</title>
+    <link rel="stylesheet" href="_assets/_reset.css">
+    <link rel="stylesheet" href="_assets/styles.css">
+</head>
+<body>
+    <section class="page-header">
+        <div class="header-title">
+            <h1>ALEXANDER TSUKANOV</h1>
+            <h2>Full Stack Web Developer</h2>
+            <div class="header-location">
+                <i class="fa fa-map-marker"></i> New York, USA
+            </div>
+        </div>
+        <div class="header-links">
+            <a href="https://github.com/test" target="_blank">github.com/test</a>
+            <a href="https://instagram.com/test" target="_blank">instagram.com/test</a>
+        </div>
+    </section>
+    <section class="page-body">
+
+    </section>
+    <section class="page-footer">
+        &copy; Jon Doe
+    </section>
+</body>
 </html>
