--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section class="page-header">
         <div class="header-title">
-            <h1>ALEXANDER TSUKANOV</h1>
+            <h1>Jon Doe</h1>
             <h2>Full Stack Web Developer</h2>
             <div class="header-location">
                 <i class="fa fa-map-marker"></i> New York, USA
