--- a/index.html
+++ b/index.html
@@ -3,29 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Jon Doe - Web Developer</title>
+    <title>TBD</title>
     <link rel="stylesheet" href="_assets/_reset.css">
     <link rel="stylesheet" href="_assets/styles.css">
 </head>
 <body>
-    <section class="page-header">
-        <div class="header-title">
-            <h1>Jon Doe</h1>
-            <h2>Full Stack Web Developer</h2>
-            <div class="header-location">
-                <i class="fa fa-map-marker"></i> New York, USA
-            </div>
-        </div>
-        <div class="header-links">
-            <a href="https://github.com/test" target="_blank">github.com/test</a>
-            <a href="https://instagram.com/test" target="_blank">instagram.com/test</a>
-        </div>
-    </section>
-    <section class="page-body">
-
-    </section>
-    <section class="page-footer">
-        &copy; Jon Doe
-    </section>
+    TBD
 </body>
 </html>
